<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="Demo List" />

    <Button
        android:id="@+id/demo_yahoo_weather"
        android:text="@string/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/demo_owm_weather"
        android:text="@string/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/demo_yahoo_finance"
        android:text="@string/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/demo_google_finance"
        android:text="@string/label4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />
</LinearLayout>
