<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/weather_bg"
    tools:context="com.sdk.info.extrainfo.open_weather_map.activity.WShowActivity">

    <TextView
        android:text="@string/owm_weather_label"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn1_str"/>
        <Button
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn2_str"/>
        <Button
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn3_str"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn4_str"/>
        <Button
            android:id="@+id/btn5"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn5_str"/>
        <Button
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn6_str"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/btn_divider"/>
    <!-- 当前天气显示界面 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">
      <LinearLayout
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:orientation="vertical">
          <!-- 左侧标题栏 -->
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textColor="@color/text_detail"
              android:padding="5dp"
              android:text="当前城市:"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textColor="@color/text_detail"
              android:padding="5dp"
              android:text="实时温度:"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textColor="@color/text_detail"
              android:padding="5dp"
              android:text="今日温度:"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textColor="@color/text_detail"
              android:padding="5dp"
              android:text="天气:"/>
      </LinearLayout>
        <View android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_divider"/>
        <!-- 右侧信息栏 -->
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingLeft="2dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_detail"
                android:padding="5dp"
                android:gravity="left"/>
            <TextView
                android:id="@+id/cur_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_detail"
                android:padding="5dp"
                android:gravity="left"/>
            <TextView
                android:id="@+id/cur_range_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_detail"
                android:padding="5dp"
                android:gravity="left"/>
            <TextView
                android:id="@+id/cur_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_detail"
                android:padding="5dp"
                android:gravity="left"/>
            <ImageView
                android:id="@+id/cur_state_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>

    </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/btn_divider"/>
    <!-- 天气预报显示界面 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="16sp"
                android:textColor="@color/text_detail_title"
                android:text="未来三天天气"
                android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--  明天天气  -->

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="@color/fore_item1_bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
                <!-- 天气Icon -->
                <ImageView
                    android:id="@+id/forecast_day1_icon"
                    style="@style/forecast_item_icon"/>
                <!-- 总体状况 -->
                <TextView
                    android:id="@+id/forecast_day1_state"
                    style="@style/forecast_item_info" />
                <!-- 温度显示 -->
                <TextView
                    android:id="@+id/forecast_day1_temp"
                    style="@style/forecast_item_info" />
                <!-- 风力 -->
                <TextView
                    android:id="@+id/forecast_day1_wind"
                    style="@style/forecast_item_info"  />
                <!-- 星期几 -->
                <TextView
                    android:id="@+id/forecast_day1_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    style="@style/forecast_item_info"  />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  后天天气  -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/fore_item1_bg"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
                <!-- 天气Icon -->
                <ImageView
                    android:id="@+id/forecast_day2_icon"
                    style="@style/forecast_item_icon"/>
                <!-- 总体状况 -->
                <TextView
                    android:id="@+id/forecast_day2_state"
                    style="@style/forecast_item_info" />
                <!-- 温度显示 -->
                <TextView
                    android:id="@+id/forecast_day2_temp"
                    style="@style/forecast_item_info" />
                <!-- 风力 -->
                <TextView
                    android:id="@+id/forecast_day2_wind"
                    style="@style/forecast_item_info"  />
                <!-- 星期几 -->
                <TextView
                    android:id="@+id/forecast_day2_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    style="@style/forecast_item_info"  />


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--  大后天天气  -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
           app:cardBackgroundColor="@color/fore_item1_bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
                <!-- 天气Icon -->
                <ImageView
                    android:id="@+id/forecast_day3_icon"
                    style="@style/forecast_item_icon"/>
                <!-- 总体状况 -->
                <TextView
                    android:id="@+id/forecast_day3_state"
                    style="@style/forecast_item_info" />
                <!-- 温度显示 -->
                <TextView
                    android:id="@+id/forecast_day3_temp"
                    style="@style/forecast_item_info" />
                <!-- 风力 -->
                <TextView
                    android:id="@+id/forecast_day3_wind"
                    style="@style/forecast_item_info"  />
                <!-- 星期几 -->
                <TextView
                    android:id="@+id/forecast_day3_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    style="@style/forecast_item_info"  />

            </LinearLayout>
        </android.support.v7.widget.CardView>>

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <include layout="@layout/omw_forecast_weather_item"/>

            </LinearLayout>

   </LinearLayout>
</ScrollView>
</LinearLayout>
